src/render/assets/css/launcher.css
/* ... */
.input-wrapper .input .title {
    color: grey;
    transition: 200ms color;
    overflow: hidden;
    line-height: 22px;
    font-size: 14px;
}

.input-wrapper .input {
    text-rendering: auto;
    color: -internal-light-dark(black, white);
    letter-spacing: normal;
    word-spacing: normal;
    text-transform: none;
    text-indent: 0px;
    text-shadow: none;
    display: inline-block;
    text-align: start;
    -webkit-appearance: textfield;
    appearance: textfield;
    background-color: -internal-light-dark(rgb(255, 255, 255), rgb(59, 59, 59));
    -webkit-rtl-ordering: logical;
    cursor: text;
    margin: 0em;
    font: 400 13.3333px Arial;
    padding: 1px 2px;
    border-width: 2px;
    border-style: inset;
    border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
    border-image: initial;
    border: 1px solid gray;
    border-width: 0px 0px 1px 0px;
    background-color: var(--background-secondary-alt);
    outline: none;
    height: 32px;
    width: 184px;
    color: #eee;
    font-size: 14px;
    font-family: var(--font-primary);
    opacity: 0.8;
    padding: 4px 4px 4px 8px;
    position: relative;
    width: 100%;
    margin: 5px 0;
    display: flex;
    justify-content: space-between;
}

.input-wrapper .small-button {
    line-height: 22px;
    width: 52px;
    height: auto;
    display: block;
    text-align: center;
    border-radius: initial;
}

.resolution {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: baseline;
}

.resolution>input {
    text-align: center;
}

.resolution>.resolutionCross {
    position: relative;
    margin: 0 1em;
}

.grow {
    width: auto;
}

.bxcF1-box {
    background: var(--background-secondary);
    padding: 16px;
    border-radius: 8px;
    margin-bottom: 20px;
}

.bxcF1-box .separator {
    margin: 16px 0 !important;
}
.bxcF1-box > :not(.separator) + *:last-child {
    margin-top: 16px !important;
}

.release {
    position: relative;
}
.release .icon {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: center;
    padding-top: 8px;
}
.release .icon > img {
    max-width: 52px !important;
    max-height: 52px !important;
}

.ictx-flex {
    position: relative;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
}
.ictx-flex.align-top {
    align-items: flex-start;
}

.ictx-flex>* {
    transform: translateZ(0);
}

.ictx-flex>.icon {
    max-width: 64px;
    max-height: 64px;
    margin: 0 16px 0 0;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
}

.ictx-flex>.icon>img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}
.ictx-flex>.icon>img+span {
    margin-top: 8px;
}
.ictx-flex>.icon>span {
    font-size: 14px;
    font-weight: 500;
    padding: 0;
}

.ictx-flex .vbx {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}

.ictx-flex .vbx>.text {
    white-space: nowrap;
    overflow: hidden;
    line-height: normal;
}

.ictx-flex .vbx>.text.name {
    font-size: 2em;
    font-weight: 600;
    margin-right: 4px;
    color: var(--header-primary);
}

.ictx-flex .vbx>.text.version {
    font-family: var(--font-primary);
    font-size: 1.2em;
    font-weight: 500;
    color: var(--header-secondary);
}

.ictx-flex .vbx.cu>.text.id {
    font-family: var(--font-primary);
    font-size: 1.4em;
    font-weight: 400;
    color: var(--header-secondary);
}

.ictx-flex>button.r {
    border: 1px solid var(--background-modifier-accent);
    font-size: 14px;
    line-height: inherit;
    margin-left: auto;
}

a {
    color: var(--interactive-normal);
}

a:hover {
    color: var(--interactive-hover);
}

.note.flex-group>* {
    margin: 0 8px 0 0;
}

.size12 {
    font-size: 12px !important;
    line-height: 16px !important;
}

.size14 {
    font-size: 14px !important;
    line-height: 18px !important;
}

.size16 {
    font-size: 16px !important;
    line-height: 20px !important;
}

.size20 {
    font-size: 20px !important;
    line-height: 24px !important;
}

.size24 {
    font-size: 24px !important;
    line-height: 30px !important;
}

.sizeQ {
    font-size: 1em !important;
    line-height: normal;
}

.sizeW {
    font-size: 1.2em !important;
    line-height: normal;
}

.sizeE {
    font-size: 1.5em !important;
    line-height: normal;
}

.sizeR {
    font-size: 1.6em !important;
    line-height: normal;
}

.sizeT {
    font-size: 1.8em !important;
    line-height: normal;
}

.sizeY {
    font-size: 2em !important;
    line-height: normal;
}

.sizeZ {
    font-size: 3em !important;
    line-height: normal;
}

.colorStandart {
    color: var(--text-normal)
}

.colorHeaderPrimary {
    color: var(--header-primary)
}

.subtitle-p {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    color: var(--header-secondary);
    font-weight: 600;
}

.fieldList {
    border-radius: 8px;
    background-color: var(--background-primary);
    padding: 16px;
    margin-top: 16px;
}

.fieldList>.field {
    min-height: 2em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.fieldList .spacer {
    margin-top: 24px;
}

.containedRow {
    display: flex;
    flex: 1 1 auto;
    overflow: hidden;
    margin-right: 16px;
}

.wrapper {
    margin: 0;
}


/* ==== auto scrollbar ==== */

.auto-s::-webkit-scrollbar {
    width: 16px;
    height: 16px;
    /*background: transparent;*/
}

.auto-s::-webkit-scrollbar-corner {
    background: transparent;
}

.auto-s::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-auto-thumb);
    min-height: 40px;
}

.auto-s::-webkit-scrollbar-thumb,
.auto-s::-webkit-scrollbar-track {
    border: 4px solid transparent;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    border-radius: 8px;
}
/* ... */

